updated components based on cli testing

--- a/70/drupal/cf-impact-statistics/libraries.yml
+++ b/70/drupal/cf-impact-statistics/libraries.yml
@@ -1,3 +1,5 @@
+
+# REPEAT: cf-impact-statistics
 in-view:
   remote: https://raw.githubusercontent.com/camwiegert/in-view/master/dist/in-view.min.js
   version: "v0.6.1"
