updated naming convention from field_ to repeat_

--- a/70/drupal/cf-impact-statistics/config/core.entity_form_display.paragraph.impact_statistics.default.yml
+++ b/70/drupal/cf-impact-statistics/config/core.entity_form_display.paragraph.impact_statistics.default.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.impact_statistics.field_percentage_one
-    - field.field.paragraph.impact_statistics.field_percentage_three
-    - field.field.paragraph.impact_statistics.field_percentage_two
-    - field.field.paragraph.impact_statistics.field_shortdescription_one
-    - field.field.paragraph.impact_statistics.field_shortdescription_three
-    - field.field.paragraph.impact_statistics.field_shortdescription_two
-    - field.field.paragraph.impact_statistics.field_subheading
-    - field.field.paragraph.impact_statistics.field_title
+    - field.field.paragraph.impact_statistics.repeat_percentage_one
+    - field.field.paragraph.impact_statistics.repeat_percentage_three
+    - field.field.paragraph.impact_statistics.repeat_percentage_two
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_one
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_three
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_two
+    - field.field.paragraph.impact_statistics.repeat_subheading
+    - field.field.paragraph.impact_statistics.repeat_title
     - paragraphs.paragraphs_type.impact_statistics
   module:
     - field_group
@@ -33,8 +33,8 @@ third_party_settings:
       region: content
     group_content:
       children:
-        - field_title
-        - field_subheading
+        - repeat_title
+        - repeat_subheading
       parent_name: group_tabs
       weight: 11
       format_type: tab
@@ -48,8 +48,8 @@ third_party_settings:
       region: content
     group_percentage_1:
       children:
-        - field_percentage_one
-        - field_shortdescription_one
+        - repeat_percentage_one
+        - repeat_shortdescription_one
       parent_name: group_tabs
       weight: 12
       format_type: tab
@@ -63,8 +63,8 @@ third_party_settings:
       region: content
     group_percentage_2:
       children:
-        - field_percentage_two
-        - field_shortdescription_two
+        - repeat_percentage_two
+        - repeat_shortdescription_two
       parent_name: group_tabs
       weight: 13
       format_type: tab
@@ -78,8 +78,8 @@ third_party_settings:
       region: content
     group_percentage_3:
       children:
-        - field_percentage_three
-        - field_shortdescription_three
+        - repeat_percentage_three
+        - repeat_shortdescription_three
       parent_name: group_tabs
       weight: 14
       format_type: tab
@@ -96,28 +96,28 @@ targetEntityType: paragraph
 bundle: impact_statistics
 mode: default
 content:
-  field_percentage_one:
+  repeat_percentage_one:
     weight: 1
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
-  field_percentage_three:
+  repeat_percentage_three:
     weight: 5
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
-  field_percentage_two:
+  repeat_percentage_two:
     weight: 4
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
-  field_shortdescription_one:
+  repeat_shortdescription_one:
     weight: 2
     settings:
       size: 60
@@ -125,7 +125,7 @@ content:
     third_party_settings: {  }
     type: text_textfield
     region: content
-  field_shortdescription_three:
+  repeat_shortdescription_three:
     weight: 6
     settings:
       size: 60
@@ -133,7 +133,7 @@ content:
     third_party_settings: {  }
     type: text_textfield
     region: content
-  field_shortdescription_two:
+  repeat_shortdescription_two:
     weight: 5
     settings:
       size: 60
@@ -141,7 +141,7 @@ content:
     third_party_settings: {  }
     type: text_textfield
     region: content
-  field_subheading:
+  repeat_subheading:
     weight: 2
     settings:
       rows: 5
@@ -149,7 +149,7 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_title:
+  repeat_title:
     weight: 1
     settings:
       size: 60
