--- a/70/drupal/cf-impact-statistics/config/core.entity_view_display.paragraph.impact_statistics.default.yml
+++ b/70/drupal/cf-impact-statistics/config/core.entity_view_display.paragraph.impact_statistics.default.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.impact_statistics.field_percentage_one
-    - field.field.paragraph.impact_statistics.field_percentage_three
-    - field.field.paragraph.impact_statistics.field_percentage_two
-    - field.field.paragraph.impact_statistics.field_shortdescription_one
-    - field.field.paragraph.impact_statistics.field_shortdescription_three
-    - field.field.paragraph.impact_statistics.field_shortdescription_two
-    - field.field.paragraph.impact_statistics.field_subheading
-    - field.field.paragraph.impact_statistics.field_title
+    - field.field.paragraph.impact_statistics.repeat_percentage_one
+    - field.field.paragraph.impact_statistics.repeat_percentage_three
+    - field.field.paragraph.impact_statistics.repeat_percentage_two
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_one
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_three
+    - field.field.paragraph.impact_statistics.repeat_shortdescription_two
+    - field.field.paragraph.impact_statistics.repeat_subheading
+    - field.field.paragraph.impact_statistics.repeat_title
     - paragraphs.paragraphs_type.impact_statistics
   module:
     - text
@@ -18,7 +18,7 @@ targetEntityType: paragraph
 bundle: impact_statistics
 mode: default
 content:
-  field_percentage_one:
+  repeat_percentage_one:
     weight: 2
     label: hidden
     settings:
@@ -27,7 +27,7 @@ content:
     third_party_settings: {  }
     type: number_integer
     region: content
-  field_percentage_three:
+  repeat_percentage_three:
     weight: 5
     label: hidden
     settings:
@@ -36,7 +36,7 @@ content:
     third_party_settings: {  }
     type: number_integer
     region: content
-  field_percentage_two:
+  repeat_percentage_two:
     weight: 4
     label: hidden
     settings:
@@ -45,35 +45,35 @@ content:
     third_party_settings: {  }
     type: number_integer
     region: content
-  field_shortdescription_one:
+  repeat_shortdescription_one:
     weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_shortdescription_three:
+  repeat_shortdescription_three:
     weight: 7
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_shortdescription_two:
+  repeat_shortdescription_two:
     weight: 6
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_subheading:
+  repeat_subheading:
     weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_title:
+  repeat_title:
     weight: 0
     label: hidden
     settings:
