--- a/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_subheading.yml
+++ b/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_subheading.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - paragraphs
     - text
-id: paragraph.field_subheading
-field_name: field_subheading
+id: paragraph.repeat_subheading
+field_name: repeat_subheading
 entity_type: paragraph
 type: text_long
 settings: {  }
