--- a/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_percentage_two.yml
+++ b/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_percentage_two.yml
@@ -2,19 +2,21 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_shortdescription_two
+    - field.storage.paragraph.repeat_percentage_two
     - paragraphs.paragraphs_type.impact_statistics
-  module:
-    - text
-id: paragraph.impact_statistics.field_shortdescription_two
-field_name: field_shortdescription_two
+id: paragraph.impact_statistics.repeat_percentage_two
+field_name: repeat_percentage_two
 entity_type: paragraph
 bundle: impact_statistics
-label: Description
+label: Percentage
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: text
+settings:
+  min: null
+  max: null
+  prefix: ''
+  suffix: '%'
+field_type: integer
