--- a/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_shortdescription_three.yml
+++ b/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_shortdescription_three.yml
@@ -2,17 +2,19 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_title
+    - field.storage.paragraph.repeat_shortdescription_three
     - paragraphs.paragraphs_type.impact_statistics
-id: paragraph.impact_statistics.field_title
-field_name: field_title
+  module:
+    - text
+id: paragraph.impact_statistics.repeat_shortdescription_three
+field_name: repeat_shortdescription_three
 entity_type: paragraph
 bundle: impact_statistics
-label: Title
+label: Description
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: text
