--- a/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_shortdescription_two.yml
+++ b/70/drupal/cf-impact-statistics/config/field.field.paragraph.impact_statistics.repeat_shortdescription_two.yml
@@ -2,21 +2,19 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_percentage_one
+    - field.storage.paragraph.repeat_shortdescription_two
     - paragraphs.paragraphs_type.impact_statistics
-id: paragraph.impact_statistics.field_percentage_one
-field_name: field_percentage_one
+  module:
+    - text
+id: paragraph.impact_statistics.repeat_shortdescription_two
+field_name: repeat_shortdescription_two
 entity_type: paragraph
 bundle: impact_statistics
-label: Percentage
+label: Description
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings:
-  min: null
-  max: null
-  prefix: ''
-  suffix: '%'
-field_type: integer
+settings: {  }
+field_type: text
