--- a/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_percentage_two.yml
+++ b/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_percentage_two.yml
@@ -3,8 +3,8 @@ status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_percentage_three
-field_name: field_percentage_three
+id: paragraph.repeat_percentage_two
+field_name: repeat_percentage_two
 entity_type: paragraph
 type: integer
 settings:
