--- a/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_title.yml
+++ b/70/drupal/cf-impact-statistics/config/field.storage.paragraph.repeat_title.yml
@@ -3,14 +3,15 @@ status: true
 dependencies:
   module:
     - paragraphs
-    - text
-id: paragraph.field_shortdescription_three
-field_name: field_shortdescription_three
+id: paragraph.repeat_title
+field_name: repeat_title
 entity_type: paragraph
-type: text
+type: string
 settings:
   max_length: 255
-module: text
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
