--- a/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_image_position.yml
+++ b/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_image_position.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_image_position
+    - field.storage.paragraph.repeat_image_position
     - paragraphs.paragraphs_type.image_text
   module:
     - options
-id: paragraph.image_text.field_image_position
-field_name: field_image_position
+id: paragraph.image_text.repeat_image_position
+field_name: repeat_image_position
 entity_type: paragraph
 bundle: image_text
 label: 'Image Position'
