--- a/70/drupal/scai-image-text/config/field.storage.paragraph.repeat_image.yml
+++ b/70/drupal/scai-image-text/config/field.storage.paragraph.repeat_image.yml
@@ -2,15 +2,14 @@ langcode: en
 status: true
 dependencies:
   module:
+    - media
     - paragraphs
-id: paragraph.field_question
-field_name: field_question
+id: paragraph.repeat_image
+field_name: repeat_image
 entity_type: paragraph
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
+  target_type: media
 module: core
 locked: false
 cardinality: 1
