--- a/70/drupal/inee-question-answer-pair/config/core.entity_view_display.paragraph.question_answer_pair.default.yml
+++ b/70/drupal/inee-question-answer-pair/config/core.entity_view_display.paragraph.question_answer_pair.default.yml
@@ -2,8 +2,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.question_answer_pair.field_answer
-    - field.field.paragraph.question_answer_pair.field_question
+    - field.field.paragraph.question_answer_pair.repeat_answer
+    - field.field.paragraph.question_answer_pair.repeat_question
     - paragraphs.paragraphs_type.question_answer_pair
   module:
     - text
@@ -12,14 +12,14 @@ targetEntityType: paragraph
 bundle: question_answer_pair
 mode: default
 content:
-  field_answer:
+  repeat_answer:
     weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_question:
+  repeat_question:
     weight: 0
     label: hidden
     settings:
