--- a/70/drupal/inee-question-answer-pair/config/field.field.paragraph.question_answer_pair.repeat_answer.yml
+++ b/70/drupal/inee-question-answer-pair/config/field.field.paragraph.question_answer_pair.repeat_answer.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_answer
+    - field.storage.paragraph.repeat_answer
     - paragraphs.paragraphs_type.question_answer_pair
   module:
     - text
-id: paragraph.question_answer_pair.field_answer
-field_name: field_answer
+id: paragraph.question_answer_pair.repeat_answer
+field_name: repeat_answer
 entity_type: paragraph
 bundle: question_answer_pair
 label: Answer
