--- a/70/drupal/inee-question-answer-pair/config/field.storage.paragraph.repeat_question.yml
+++ b/70/drupal/inee-question-answer-pair/config/field.storage.paragraph.repeat_question.yml
@@ -3,13 +3,15 @@ status: true
 dependencies:
   module:
     - paragraphs
-    - text
-id: paragraph.field_answer
-field_name: field_answer
+id: paragraph.repeat_question
+field_name: repeat_question
 entity_type: paragraph
-type: text_long
-settings: {  }
-module: text
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
