--- a/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_image.yml
+++ b/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_image.yml
@@ -2,11 +2,11 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_image
+    - field.storage.paragraph.repeat_image
     - media.type.image
     - paragraphs.paragraphs_type.image_text
-id: paragraph.image_text.field_image
-field_name: field_image
+id: paragraph.image_text.repeat_image
+field_name: repeat_image
 entity_type: paragraph
 bundle: image_text
 label: Image
