--- a/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_img_text_cta.yml
+++ b/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_img_text_cta.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_img_text_cta
+    - field.storage.paragraph.repeat_img_text_cta
     - paragraphs.paragraphs_type.image_text
   module:
     - link
-id: paragraph.image_text.field_img_text_cta
-field_name: field_img_text_cta
+id: paragraph.image_text.repeat_img_text_cta
+field_name: repeat_img_text_cta
 entity_type: paragraph
 bundle: image_text
 label: CTA
