--- a/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_rich_text.yml
+++ b/70/drupal/scai-image-text/config/field.field.paragraph.image_text.repeat_rich_text.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_rich_text
+    - field.storage.paragraph.repeat_rich_text
     - paragraphs.paragraphs_type.image_text
   module:
     - text
-id: paragraph.image_text.field_rich_text
-field_name: field_rich_text
+id: paragraph.image_text.repeat_rich_text
+field_name: repeat_rich_text
 entity_type: paragraph
 bundle: image_text
 label: Text
