--- a/70/drupal/scai-image-text/config/field.storage.paragraph.repeat_img_text_cta.yml
+++ b/70/drupal/scai-image-text/config/field.storage.paragraph.repeat_img_text_cta.yml
@@ -2,15 +2,14 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media
+    - link
     - paragraphs
-id: paragraph.field_image
-field_name: field_image
+id: paragraph.repeat_img_text_cta
+field_name: repeat_img_text_cta
 entity_type: paragraph
-type: entity_reference
-settings:
-  target_type: media
-module: core
+type: link
+settings: {  }
+module: link
 locked: false
 cardinality: 1
 translatable: true
