--- a/70/drupal/quote/component.info.yml
+++ b/70/drupal/quote/component.info.yml
@@ -2,3 +2,8 @@ name: 'Quote'
 description: 'A Featured Quote with the quote, the source, and person reference'
 post-install notes: ''
 dependencies:
+  components:
+  composer:
+    drupal/paragraphs: ^1.11
+  extensions:
+    - paragraphs
