--- a/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_description.yml
+++ b/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_description.yml
@@ -3,13 +3,13 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.repeat_description
-    - paragraphs.paragraphs_type.aligned_image_feature
+    - paragraphs.paragraphs_type.image_text_feature
   module:
     - text
-id: paragraph.aligned_image_feature.repeat_description
+id: paragraph.image_text_feature.repeat_description
 field_name: repeat_description
 entity_type: paragraph
-bundle: aligned_image_feature
+bundle: image_text_feature
 label: Description
 description: ''
 required: false
