--- a/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_cta.yml
+++ b/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_cta.yml
@@ -3,13 +3,13 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.repeat_cta
-    - paragraphs.paragraphs_type.aligned_image_feature
+    - paragraphs.paragraphs_type.image_text_feature
   module:
     - link
-id: paragraph.aligned_image_feature.repeat_cta
+id: paragraph.image_text_feature.repeat_cta
 field_name: repeat_cta
 entity_type: paragraph
-bundle: aligned_image_feature
+bundle: image_text_feature
 label: Link
 description: ''
 required: false
