--- a/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_title.yml
+++ b/drupal/image-text/config/field.field.paragraph.image_text_feature.repeat_title.yml
@@ -3,11 +3,11 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.repeat_title
-    - paragraphs.paragraphs_type.aligned_image_feature
-id: paragraph.aligned_image_feature.repeat_title
+    - paragraphs.paragraphs_type.image_text_feature
+id: paragraph.image_text_feature.repeat_title
 field_name: repeat_title
 entity_type: paragraph
-bundle: aligned_image_feature
+bundle: image_text_feature
 label: Title
 description: ''
 required: true
