review and repair

--- a/drupal/quote-slider/config/core.entity_view_display.paragraph.repeat_quote_slider.default.yml
+++ b/drupal/quote-slider/config/core.entity_view_display.paragraph.repeat_quote_slider.default.yml
@@ -11,7 +11,7 @@ targetEntityType: paragraph
 bundle: quote_slider
 mode: default
 content:
-  field_repeat_quote_slides:
+  repeat_quote_slides:
     type: entity_reference_revisions_entity_view
     weight: 0
     label: above
