--- a/drupal/quote-slider/config/core.entity_view_display.paragraph.repeat_quote_slide.default.yml
+++ b/drupal/quote-slider/config/core.entity_view_display.paragraph.repeat_quote_slide.default.yml
@@ -11,7 +11,7 @@ targetEntityType: paragraph
 bundle: quote_slide
 mode: default
 content:
-  field_repeat_quote_slide_attr:
+  repeat_quote_slide_attr:
     weight: 1
     label: hidden
     settings:
@@ -19,7 +19,7 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_repeat_quote_slide_image:
+  repeat_quote_slide_image:
     type: entity_reference_entity_view
     weight: 2
     label: hidden
@@ -28,7 +28,7 @@ content:
       link: false
     third_party_settings: {  }
     region: content
-  field_repeat_quote_slide_text:
+  repeat_quote_slide_text:
     weight: 3
     label: above
     settings: {  }
