33666716 Update component info to cards component

--- a/drupal/cards/component.info.yml
+++ b/drupal/cards/component.info.yml
@@ -4,8 +4,10 @@ post-install notes: ''
 dependencies:
   components:
   composer:
-    drupal/paragraphs: ^1.12
+    drupal/paragraphs: ^1.5
     drupal/svg_image: ^1.14
+    drupal/viewsreference: ^1.7
   extensions:
     - paragraphs
     - svg_image
+    - viewsreference
