add wordpress block element

--- a/components.info.yml
+++ b/components.info.yml
@@ -157,3 +157,7 @@ wordpress:
       - description
       - button_label
       - button_url
+  block:
+    fields:
+      - primary_heading
+      - content
